# farm-ext-app

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  PS119 API.yaml  README.md  build.sh  conftest.py  learning.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  tailwind.config.js
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  testing.py
core/advisory/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/advisory/migrations/: 0001_initial.py  0002_alter_advisorypost_id.py  0003_remove_advisorypost_tags_advisorypost_tags.py
core/analytics/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
core/analytics/migrations/: 0001_initial.py
core/analytics/serializers/: __init__.py  dashboard_whitelist_serializers.py
core/analytics/views/: __init__.py  advisory_views.py  analytics_view.py  auth.py  farms_views.py  geo_views.py  overview.py  questions_view.py  visits_views.py
core/common/: admin.py  api_urls.py  apps.py  constants.py  decorators.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
core/common/migrations/: 0001_initial.py  0002_alter_lga_id.py  0003_ward.py
core/common/tests/: test_baseline.py  test_pagination.py
core/custom_user/: admin.py  apps.py  models.py  serializers.py  views.py
core/custom_user/migrations/: 0001_initial.py  0002_alter_user_options_user_phone_number_and_more.py  0003_alter_user_id_alter_user_role.py
core/farms/: admin.py  apps.py  constants.py  filters.py  forms.py  models.py  urls.py  views.py
core/notifications/: admin.py  apps.py  context_processors.py  models.py  signals.py  urls.py  utils.py  views.py
core/profiles/: admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
core/questions/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
core/templates/: 404.html  base.html
core/verses/: admin.py  apps.py  book_map.py  choices.py  constants.py  enums.py  exceptions.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
core/visits/: admin.py  apps.py  constants.py  models.py  urls.py  utils.py  views.py
(+177 files in other folders)
